--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel = "icon" href = "https://ak.picdn.net/shutterstock/videos/1012970891/thumb/1.jpg" type = "image/x-icon">
+          
+    <title>Secrecy</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" type="text/javascript" defer></script>
   </head>
